@@ -72,13 +72,16 @@ API changes:
 --------------------------------------------------------
 + GdiPlusDebuggerHelper class:
   + New GetDebuggerVisualizerProviders method (.NET Framework 4.7.2 only)
-+ New ColorDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
 + New ImageDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
++ New IconDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
++ New ColorDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
++ New ColorPaletteDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
 + New GraphicsDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
 
 + KGySoft.Drawing.DebuggerVisualizers.GdiPlus.Serialization namespace:
 ----------------------------------------------------------------------
 + The ImageSerializer class has been made public.
++ The IconSerializer class has been made public.
 + The GraphicsSerializer class has been made public.
 + The ColorSerializer class has been made public.
 + The ColorPaletteSerializer class has been made public.
